--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-numpy>=1.13
-pyyaml>=3.12
-matplotlib
-opencv-python>=3.2
-setuptools
-Cython
-mock
-scipy
-h5py
-memory_profiler
+numpy==1.17.3
+https://download.pytorch.org/whl/cu100/torch-1.0.1-cp36-cp36m-win_amd64.whl
+torchvision==0.4.1
+cython==0.29.13
+opencv-python==4.1.1.26
+google==2.0.2
+protobuf==3.10.0
+future==0.18.1
+memory_profiler==0.55.0
+pyyaml==5.1.2
+h5py==2.10.0
+scipy==1.3.1
+matplotlib==3.1.1
+setuptools==40.8.0
+mock=3.0.5
