--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.17.3
-https://download.pytorch.org/whl/cu100/torch-1.0.1-cp36-cp36m-win_amd64.whl
+torch==1.0.1 from https://download.pytorch.org/whl/cu100/torch-1.0.1-cp36-cp36m-win_amd64.whlhttps://download.pytorch.org/whl/cu100/torch-1.0.1-cp36-cp36m-win_amd64.whl
 torchvision==0.4.1
 cython==0.29.13
 opencv-python==4.1.1.26
@@ -12,4 +12,4 @@ h5py==2.10.0
 scipy==1.3.1
 matplotlib==3.1.1
 setuptools==40.8.0
-mock=3.0.5
+mock==3.0.5
