--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,96 @@
-numpy==1.17.3
-torch==1.0.1 from https://download.pytorch.org/whl/cu100/torch-1.0.1-cp36-cp36m-win_amd64.whlhttps://download.pytorch.org/whl/cu100/torch-1.0.1-cp36-cp36m-win_amd64.whl
-torchvision==0.4.1
-cython==0.29.13
-opencv-python==4.1.1.26
-google==2.0.2
-protobuf==3.10.0
+attrs==19.3.0
+backcall==0.1.0
+beautifulsoup4==4.8.1
+bleach==3.1.0
+Brotli==1.0.7
+chumpy==0.69
+cloudpickle==0.8.0
+colorama==0.4.1
+cycler==0.10.0
+Cython==0.29.13
+dask==1.1.3
+decorator==4.4.0
+defusedxml==0.6.0
+detectron==0.0.0
+docopt==0.6.2
+entrypoints==0.3
 future==0.18.1
-memory_profiler==0.55.0
-pyyaml==5.1.2
+google==2.0.2
 h5py==2.10.0
-scipy==1.3.1
+idlex==1.18
+importlib-metadata==0.23
+ipykernel==5.1.2
+ipython==7.8.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.13.3
+Jinja2==2.10.3
+joblib==0.13.2
+jsonschema==3.1.1
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.6.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+kiwisolver==1.1.0
+locket==0.2.0
+lxml==4.4.1
+MarkupSafe==1.1.1
 matplotlib==3.1.1
-setuptools==40.8.0
+memory-profiler==0.55.0
+mistune==0.8.4
 mock==3.0.5
+more-itertools==7.2.0
+nbconvert==5.6.0
+nbformat==4.4.0
+notebook==6.0.1
+numpy==1.17.3
+opencv-python==4.1.1.26
+pandocfilters==1.4.2
+parso==0.3.4
+partd==0.3.9
+pickleshare==0.7.5
+Pillow==6.2.0
+pip==19.0.3
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
+protobuf==3.10.0
+psutil==5.6.3
+ptpython==2.0.4
+pycocotools==2.0
+Pygments==2.3.1
+pyodbc==4.0.26
+pyparsing==2.4.2
+pyrsistent==0.15.4
+python-dateutil==2.8.0
+pythonnet==2.4.0.dev0
+python-snappy==0.5.3
+pywin32==225
+pywinpty==0.5.5
+PyYAML==5.1.2
+pyzmq==18.1.0
+qtconsole==4.5.5
+QtPy==1.6.0
+scipy==1.3.1
+Send2Trash==1.5.0
+setuptools==40.8.0
+six==1.12.0
+soupsieve==1.9.4
+sqlite-bro==0.8.11
+terminado==0.8.2
+testpath==0.4.2
+toolz==0.9.0
+https://download.pytorch.org/whl/cu100/torch-1.0.1-cp36-cp36m-win_amd64.whl
+torchvision==0.4.1
+tornado==6.0.3
+traitlets==4.3.3
+wcwidth==0.1.7
+webencodings==0.5.1
+wheel==0.33.1
+widgetsnbextension==3.5.1
+winpython==1.11.20190223
+zipp==0.6.0
